# ymgk-qa-ai

./: .gitignore  README.md
.github/workflows/: ci.yml
01-S-W-O-T/: 1.Çarpanlar ve Katlar SWOT Analizi.docx
01-S-W-O-T-ANALIZI/: 2.Cebirsel İfadeler Konusu için SWOT Analizi.docx  3.uslu_ifadeler.docx  4.Kareköklü İfadeler SWOT Analizi.docx  5.olasilik_SWOT.docx
02-SMART-HEDEFLER/: 1.Çarpanlar ve Katlar SMART.docx  2.Cebirsel İfadeler Konusu için SMART Hedefler.docx  3.uslu_ifadeler.docx  4.Karekök SMART Analizi.docx  5.SmartHedeflerOlasılık.docx
03-VIDEOLAR/: LINKLER.txt
03-VİDEOLAR/: LİNKLER.txt
04-DOCS/: Taslak LGS - TASLAK (1).csv  Taslak LGS - TASLAK.csv  Taslak LGS.xlsx  Taslak-LGS.csv  model_rag_sozlesme_v1.docx  rag.md  sorular.csv  ymgk.docx  ~$del_rag_sozlesme_v1.docx
06-RAG-WITH-LANGCHAIN/: .env  .gitignore  README.md  env.example  environment.yml  pyproject.toml  rag.plan.md  requirements-dev.txt  requirements.txt
06-RAG-WITH-LANGCHAIN/data/generated_questions/: .gitkeep
06-RAG-WITH-LANGCHAIN/docker/: Dockerfile  docker-compose.yml
06-RAG-WITH-LANGCHAIN/generated_visuals/: .gitkeep
06-RAG-WITH-LANGCHAIN/notebooks/: .gitkeep
06-RAG-WITH-LANGCHAIN/scripts/: init_vectorstore.py  list_gemini_models.py  run_api.py  test_gemini_key.py  test_generation.py  verify_config_loader_fix.py
06-RAG-WITH-LANGCHAIN/src/: __init__.py  config.py  langchain_rag.py
06-RAG-WITH-LANGCHAIN/src/api/: __init__.py  main.py
06-RAG-WITH-LANGCHAIN/src/manim_visuals/: __init__.py  ebob_visualization.py  visual_generator.py
06-RAG-WITH-LANGCHAIN/src/models/: __init__.py  api_models.py  combination.py  config_schema.py  question.py
06-RAG-WITH-LANGCHAIN/src/services/: __init__.py  combination_selector.py  config_loader.py  diversity_service.py  embedding_service.py  filter_service.py  llm_client.py  output_formatter.py  prompt_builder.py  question_generator.py  retriever.py
06-RAG-WITH-LANGCHAIN/tests/: conftest.py
06-RAG-WITH-LANGCHAIN/tests/fixtures/: sample_configs.json  sample_questions.csv
06-RAG-WITH-LANGCHAIN/tests/integration/: test_api.py  test_pipeline.py
06-RAG-WITH-LANGCHAIN/tests/unit/: test_combination_selector.py  test_config_loader.py  test_filter_service.py  test_output_formatter.py  test_prompt_builder.py  test_retriever.py
06-RAG-WITH-LANGCHAIN/vectorstore/: .gitkeep
LGS-AR/: LGS-AR.slnx
LGS-AR/Assets/: a.unity  u.unity
LGS-AR/Assets/Materials/: BagMat.mat  BlueMat.mat  YellowMat.mat
LGS-AR/Assets/Resources/: VuforiaConfiguration.asset
LGS-AR/Assets/Scenes/: VuforiaScene.unity
LGS-AR/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
LGS-AR/Assets/StreamingAssets/Vuforia/: SorularDB.xml
LGS-AR/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
LGS-AR/Assets/Timeline/: Q1Target.playable
LGS-AR/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  URPProjectSettings.asset
lgs-model/data/processed/: cleaned_dataset.csv  dataset_model_final.csv  dataset_ocr_li.csv
lgs-model/data/raw/: sorular.csv
lgs-model/notebooks/: lgs_model.ipynb  lgs_preprocessing.ipynb
lgs-model/outputs/: configs.json
